--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,9 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - OfficialBishal
 
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  - OfficialBishal/GeomMaskAttack
+  - OfficialBishal/Localized-Weather-Forecasting-using-ANN-and-Back-Propagation
+  - OfficialBishal/NugaOS
+  - OfficialBishal/QueStack
+  - OfficialBishal/Face-Detection-tracking-and-recognition-using-opencv-python-and-Arduino
